parser.output
Grammar

    0 $accept: expression $end

    1 expression: conjunction
    2           | expression OR conjunction

    3 conjunction: conjunction AND equality
    4            | equality

    5 equality: equality "==" relational
    6         | equality "!=" relational
    7         | relational

    8 relational: relational ">" term
    9           | relational ">=" term
   10           | relational "<" term
   11           | relational "<=" term
   12           | term

   13 term: term '+' factor
   14     | term '-' factor
   15     | factor

   16 factor: factor '*' power
   17       | factor '/' power
   18       | factor '%' power
   19       | power

   20 power: power '^' unary
   21      | unary

   22 unary: NOT unary
   23      | '-' unary
   24      | abs

   25 abs: '|' abs '|'
   26    | literal

   27 literal: '(' expression ')'
   28        | INT
   29        | DBL
   30        | TRUE
   31        | FALSE
   32        | IDENT


Terminals, with rules where they appear

    $end (0) 0
    '%' (37) 18
    '(' (40) 27
    ')' (41) 27
    '*' (42) 16
    '+' (43) 13
    '-' (45) 14 23
    '/' (47) 17
    '^' (94) 20
    '|' (124) 25
    error (256)
    INT (258) 28
    DBL (259) 29
    TRUE (260) 30
    FALSE (261) 31
    IDENT (262) 32
    OR (263) 2
    AND (264) 3
    NOT (265) 22
    UNARY (266)
    "==" (267) 5
    "!=" (268) 6
    ">" (269) 8
    ">=" (270) 9
    "<" (271) 10
    "<=" (272) 11


Nonterminals, with rules where they appear

    $accept (27)
        on left: 0
    expression (28)
        on left: 1 2
        on right: 0 2 27
    conjunction (29)
        on left: 3 4
        on right: 1 2 3
    equality (30)
        on left: 5 6 7
        on right: 3 4 5 6
    relational (31)
        on left: 8 9 10 11 12
        on right: 5 6 7 8 9 10 11
    term (32)
        on left: 13 14 15
        on right: 8 9 10 11 12 13 14
    factor (33)
        on left: 16 17 18 19
        on right: 13 14 15 16 17 18
    power (34)
        on left: 20 21
        on right: 16 17 18 19 20
    unary (35)
        on left: 22 23 24
        on right: 20 21 22 23
    abs (36)
        on left: 25 26
        on right: 24 25
    literal (37)
        on left: 27 28 29 30 31 32
        on right: 26


State 0

    0 $accept: • expression $end

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    expression   go to state 10
    conjunction  go to state 11
    equality     go to state 12
    relational   go to state 13
    term         go to state 14
    factor       go to state 15
    power        go to state 16
    unary        go to state 17
    abs          go to state 18
    literal      go to state 19


State 1

   28 literal: INT •

    $default  reduce using rule 28 (literal)


State 2

   29 literal: DBL •

    $default  reduce using rule 29 (literal)


State 3

   30 literal: TRUE •

    $default  reduce using rule 30 (literal)


State 4

   31 literal: FALSE •

    $default  reduce using rule 31 (literal)


State 5

   32 literal: IDENT •

    $default  reduce using rule 32 (literal)


State 6

   22 unary: NOT • unary

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    unary    go to state 20
    abs      go to state 18
    literal  go to state 19


State 7

   23 unary: '-' • unary

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    unary    go to state 21
    abs      go to state 18
    literal  go to state 19


State 8

   25 abs: '|' • abs '|'

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    abs      go to state 22
    literal  go to state 19


State 9

   27 literal: '(' • expression ')'

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    expression   go to state 23
    conjunction  go to state 11
    equality     go to state 12
    relational   go to state 13
    term         go to state 14
    factor       go to state 15
    power        go to state 16
    unary        go to state 17
    abs          go to state 18
    literal      go to state 19


State 10

    0 $accept: expression • $end
    2 expression: expression • OR conjunction

    $end  shift, and go to state 24
    OR    shift, and go to state 25


State 11

    1 expression: conjunction •
    3 conjunction: conjunction • AND equality

    AND  shift, and go to state 26

    $default  reduce using rule 1 (expression)


State 12

    4 conjunction: equality •
    5 equality: equality • "==" relational
    6         | equality • "!=" relational

    "=="  shift, and go to state 27
    "!="  shift, and go to state 28

    $default  reduce using rule 4 (conjunction)


State 13

    7 equality: relational •
    8 relational: relational • ">" term
    9           | relational • ">=" term
   10           | relational • "<" term
   11           | relational • "<=" term

    ">"   shift, and go to state 29
    ">="  shift, and go to state 30
    "<"   shift, and go to state 31
    "<="  shift, and go to state 32

    $default  reduce using rule 7 (equality)


State 14

   12 relational: term •
   13 term: term • '+' factor
   14     | term • '-' factor

    '+'  shift, and go to state 33
    '-'  shift, and go to state 34

    $default  reduce using rule 12 (relational)


State 15

   15 term: factor •
   16 factor: factor • '*' power
   17       | factor • '/' power
   18       | factor • '%' power

    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 15 (term)


State 16

   19 factor: power •
   20 power: power • '^' unary

    '^'  shift, and go to state 38

    $default  reduce using rule 19 (factor)


State 17

   21 power: unary •

    $default  reduce using rule 21 (power)


State 18

   24 unary: abs •

    $default  reduce using rule 24 (unary)


State 19

   26 abs: literal •

    $default  reduce using rule 26 (abs)


State 20

   22 unary: NOT unary •

    $default  reduce using rule 22 (unary)


State 21

   23 unary: '-' unary •

    $default  reduce using rule 23 (unary)


State 22

   25 abs: '|' abs • '|'

    '|'  shift, and go to state 39


State 23

    2 expression: expression • OR conjunction
   27 literal: '(' expression • ')'

    OR   shift, and go to state 25
    ')'  shift, and go to state 40


State 24

    0 $accept: expression $end •

    $default  accept


State 25

    2 expression: expression OR • conjunction

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    conjunction  go to state 41
    equality     go to state 12
    relational   go to state 13
    term         go to state 14
    factor       go to state 15
    power        go to state 16
    unary        go to state 17
    abs          go to state 18
    literal      go to state 19


State 26

    3 conjunction: conjunction AND • equality

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    equality    go to state 42
    relational  go to state 13
    term        go to state 14
    factor      go to state 15
    power       go to state 16
    unary       go to state 17
    abs         go to state 18
    literal     go to state 19


State 27

    5 equality: equality "==" • relational

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    relational  go to state 43
    term        go to state 14
    factor      go to state 15
    power       go to state 16
    unary       go to state 17
    abs         go to state 18
    literal     go to state 19


State 28

    6 equality: equality "!=" • relational

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    relational  go to state 44
    term        go to state 14
    factor      go to state 15
    power       go to state 16
    unary       go to state 17
    abs         go to state 18
    literal     go to state 19


State 29

    8 relational: relational ">" • term

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    term     go to state 45
    factor   go to state 15
    power    go to state 16
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 30

    9 relational: relational ">=" • term

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    term     go to state 46
    factor   go to state 15
    power    go to state 16
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 31

   10 relational: relational "<" • term

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    term     go to state 47
    factor   go to state 15
    power    go to state 16
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 32

   11 relational: relational "<=" • term

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    term     go to state 48
    factor   go to state 15
    power    go to state 16
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 33

   13 term: term '+' • factor

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    factor   go to state 49
    power    go to state 16
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 34

   14 term: term '-' • factor

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    factor   go to state 50
    power    go to state 16
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 35

   16 factor: factor '*' • power

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    power    go to state 51
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 36

   17 factor: factor '/' • power

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    power    go to state 52
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 37

   18 factor: factor '%' • power

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    power    go to state 53
    unary    go to state 17
    abs      go to state 18
    literal  go to state 19


State 38

   20 power: power '^' • unary

    INT    shift, and go to state 1
    DBL    shift, and go to state 2
    TRUE   shift, and go to state 3
    FALSE  shift, and go to state 4
    IDENT  shift, and go to state 5
    NOT    shift, and go to state 6
    '-'    shift, and go to state 7
    '|'    shift, and go to state 8
    '('    shift, and go to state 9

    unary    go to state 54
    abs      go to state 18
    literal  go to state 19


State 39

   25 abs: '|' abs '|' •

    $default  reduce using rule 25 (abs)


State 40

   27 literal: '(' expression ')' •

    $default  reduce using rule 27 (literal)


State 41

    2 expression: expression OR conjunction •
    3 conjunction: conjunction • AND equality

    AND  shift, and go to state 26

    $default  reduce using rule 2 (expression)


State 42

    3 conjunction: conjunction AND equality •
    5 equality: equality • "==" relational
    6         | equality • "!=" relational

    "=="  shift, and go to state 27
    "!="  shift, and go to state 28

    $default  reduce using rule 3 (conjunction)


State 43

    5 equality: equality "==" relational •
    8 relational: relational • ">" term
    9           | relational • ">=" term
   10           | relational • "<" term
   11           | relational • "<=" term

    ">"   shift, and go to state 29
    ">="  shift, and go to state 30
    "<"   shift, and go to state 31
    "<="  shift, and go to state 32

    $default  reduce using rule 5 (equality)


State 44

    6 equality: equality "!=" relational •
    8 relational: relational • ">" term
    9           | relational • ">=" term
   10           | relational • "<" term
   11           | relational • "<=" term

    ">"   shift, and go to state 29
    ">="  shift, and go to state 30
    "<"   shift, and go to state 31
    "<="  shift, and go to state 32

    $default  reduce using rule 6 (equality)


State 45

    8 relational: relational ">" term •
   13 term: term • '+' factor
   14     | term • '-' factor

    '+'  shift, and go to state 33
    '-'  shift, and go to state 34

    $default  reduce using rule 8 (relational)


State 46

    9 relational: relational ">=" term •
   13 term: term • '+' factor
   14     | term • '-' factor

    '+'  shift, and go to state 33
    '-'  shift, and go to state 34

    $default  reduce using rule 9 (relational)


State 47

   10 relational: relational "<" term •
   13 term: term • '+' factor
   14     | term • '-' factor

    '+'  shift, and go to state 33
    '-'  shift, and go to state 34

    $default  reduce using rule 10 (relational)


State 48

   11 relational: relational "<=" term •
   13 term: term • '+' factor
   14     | term • '-' factor

    '+'  shift, and go to state 33
    '-'  shift, and go to state 34

    $default  reduce using rule 11 (relational)


State 49

   13 term: term '+' factor •
   16 factor: factor • '*' power
   17       | factor • '/' power
   18       | factor • '%' power

    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 13 (term)


State 50

   14 term: term '-' factor •
   16 factor: factor • '*' power
   17       | factor • '/' power
   18       | factor • '%' power

    '*'  shift, and go to state 35
    '/'  shift, and go to state 36
    '%'  shift, and go to state 37

    $default  reduce using rule 14 (term)


State 51

   16 factor: factor '*' power •
   20 power: power • '^' unary

    '^'  shift, and go to state 38

    $default  reduce using rule 16 (factor)


State 52

   17 factor: factor '/' power •
   20 power: power • '^' unary

    '^'  shift, and go to state 38

    $default  reduce using rule 17 (factor)


State 53

   18 factor: factor '%' power •
   20 power: power • '^' unary

    '^'  shift, and go to state 38

    $default  reduce using rule 18 (factor)


State 54

   20 power: power '^' unary •

    $default  reduce using rule 20 (power)
